# edgewit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.benchmark  INDEX_DEF_PLAN.md  LICENSE  Makefile  PER_INDEX_REFACTOR.md  PROJECT.md  README.md  RELEASE_v1_PLAN.md  SECURITY_PLAN.md  build.rs  docker-compose.benchmark.yml  docker-compose.yaml
.github/workflows/: docker.yml  docs.yml
benches/: edgewit_bench.rs
benchmarks/: download_dataset.sh  run_ingestion.sh  run_search.sh
docs/: Gemfile  _config.yml  api.html  api.md  benchmark.html  benchmark.md  configuration.md  example-setup.md  index.html  index.md  index_schema.md  manual.md  openapi.json  security.html  security.md
docs/_layouts/: default.html  post.html
docs/_posts/: 2026-03-14-first-release-of-edgewit.markdown  2026-03-14-welcome-to-jekyll.markdown  2026-03-15-multi-index-refactor-performance.markdown
plan/: BENCHMARK_PLAN_done.md
scripts/: test-container.sh
src/: api.rs  compaction.rs  index_definition.rs  index_manager.rs  indexer.rs  lib.rs  main.rs  partition.rs  registry.rs  retention.rs  schema_builder.rs  wal.rs
src/api/: .cluster.rs.pending-snap  auth.rs  cluster.rs  indexes.rs  ingest.rs  mod.rs  search.rs
src/ingestion/: mod.rs  routes.rs  validation.rs
src/schema/: builder.rs  definition.rs  mod.rs  validation.rs
tests/: e2e_aggregation_tests.rs  e2e_auth_tests.rs  e2e_tests.rs  test_parser_star.rs  test_reader_reload.rs
