[package]
name = "edgewit"
version = "0.1.0"
edition = "2024"
default-run = "edgewit"

[[bin]]
name = "edgewit"
path = "src/main.rs"

[[bin]]
name = "generate_openapi"
path = "src/bin/generate_openapi.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4.2", features = ["axum_extras"] }
bytes = "1.5"
crc32fast = "1.3"
tantivy = "0.22"

[dev-dependencies]
tempfile = "3.10"
axum-test = "16.0"
rstest = "0.21"
insta = { version = "1.39", features = ["json"] }
