
[package]
name = "edgewit"
version = "0.7.0"
edition = "2024"
default-run = "edgewit"
license = "MIT"

[[bin]]
name = "edgewit"
path = "src/main.rs"

[[bin]]
name = "generate_openapi"
path = "src/bin/generate_openapi.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.4", features = ["axum_extras"] }
bytes = "1.11"
crc32fast = "1.5"
tantivy = "0.25"
rayon = "1.11.0"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
chrono = { version = "0.4.44", features = ["serde"] }

[dev-dependencies]
tempfile = "3.27"
axum-test = "19.1"
rstest = "0.26"
insta = { version = "1.46", features = ["json"] }
criterion = { version = "0.8.2", features = ["async_tokio"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[[bench]]
name = "edgewit_bench"
harness = false
